<resources>
    <string name="app_name">Apni Dukaan</string>
    <string name="buy_button">Buy</string>
    <string name="sell_button">Sell</string>
    <string name="viewdata_button">View Data</string>
    <string name="exportdata_button">Export Data</string>
    <string name="transaction_button">Transaction</string>

    <!--Buy Screen  &  Sell Screen  (common)-->
    <string name="buy_screen">Buy</string>
    <string name="sell_screen">Sell</string>


    <string name="add_items">Add Items</string>
    <string name="date">Date</string>
    <string name="seller_text">Seller (Optional)</string>
    <string name="buyer_text">Buyer (Optional)</string>


    <!--View Data Screen-->
    <string name="viewdata_screen">View Data</string>

    <!--Export Data Screen-->
    <string name="exportdata_screen">Export Data</string>

    <!--Transaction Screen-->
    <string name="transaction_screen">Transaction</string>

</resources>